--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ejs": "~2.6.1",
     "ejs-mate": "^4.0.0",
     "express": "~4.16.1",
+    "express-session": "^1.18.0",
     "http-errors": "~1.6.3",
     "method-override": "^3.0.0",
     "mongoose": "^8.3.1",
