--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "~4.16.1",
     "express-session": "^1.18.0",
     "http-errors": "~1.6.3",
+    "joi": "^17.12.3",
     "method-override": "^3.0.0",
     "mongoose": "^8.3.1",
     "morgan": "~1.9.1",
